--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,8 @@
 {
-  "name": "Groceries ",
+  "name": "groceries",
+  "app_id": "66550d54",
+  "type": "ionic-angular",
   "integrations": {
-    "capacitor": {}
-  },
-  "type": "angular",
-  "id": "8f7c3838"
+    "cordova": {}
+  }
 }
